# Arbeidsplan

./: .env.bak  .gitignore  README.md  app.py  createEnviroment.sh  dockerfile  main.py  old_file  pyproject.toml  requirements.txt  run_gunicorn.sh  selenium_setup.sh  test_selenium.py
scraper/: .env.bak  README.md  app.py  createEnviroment.sh  crontab  dockerfile  main.py  pyproject.toml  readme.md  requirements.txt  tables.html  test.py  utils.py
static/: index.css
templates/: index.html
tests/: __init__.py
